tests/ui/once_generic_value_type_nested_rejected.stderr
error: #[once]'s cache value type cannot name the function's generic parameter `T`: the generated cache static is monomorphic and cannot hold a value of a type that names a function-level type or const parameter. Make the return type concrete, or use `#[cached]` with `key`/`convert` to handle generic functions.
  --> tests/ui/once_generic_value_type_nested_rejected.rs:10:4
   |
10 | fn generic_once_nested<T: Clone>(x: T) -> Vec<T> {
   |    ^^^^^^^^^^^^^^^^^^^
